# BlogV2

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  fetch_views.py  index.html  mkdocs.yml  netlify.toml  requirements-dev.txt  requirements.txt  sitemap.xml  tags.json
.github/workflows/: deploy.yml  page-views.yml  pre-commit.yml  setup.yml
about/: index.html
additional_scripts/: fetch_views.py
ai_songs/: index.html
ama/: index.html
architecture/: index.html
archives/2021/: index.html
archives/2022/: index.html
archives/2023/: index.html
archives/2024/: index.html
archives/2025/: index.html
assets/raw_html/: damavaco_handhistories_en.html  damavaco_handhistories_kr.html  damavaco_performance.html  damavaco_performance_en.html  damavaco_performance_kr.html
custom_data/: views.json
custom_plugin/: README.md  pyproject.toml
custom_plugin/mkdocs_material_mcdic/: __init__.py  constants.py  core.py  git.py
custom_plugin_blog/: pyproject.toml
custom_plugin_blog/mkdocs_material_mcdic/: config.py  constants.py  core.py  ga4.py  git.py  utils.py
docs/: about.md  ai_songs.md  ama.md  architecture.md  format.md  index.md
docs/assets/: icons  views.json
docs/javascripts/: autoscroll.js  mathjax.js  musicplayer.js  viewcount.js
docs/stylesheets/: 404.css  admonitions.css  article.css  excerpt.css  extra.css  footer.css  header.css  meta.css  sidebar.css
format/: index.html
javascripts/: autoscroll.js  musicplayer.js
overrides/: 404.html  blog-post.html  main.html
overrides/partials/: comments.html  content.html  header.html  post-meta.html  post.html  tags.html
random/: blog.html  quiz.html
search/: search_index.json
series/alds/: index.html
series/cpp/: index.html
series/la/: index.html
series/poker/: index.html
series/prp/: index.html
series/py/: index.html
series/rust/: index.html
stylesheets/: 404.css  admonitions.css  article.css  extra.css  header.css  meta.css
(+123 files in other folders)
