[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-material-mcdic"
authors = [
  { name="Minsung Kim", email="spongbob9876@naver.com" },
]
description = "McDic's custom plugin for the McDic's blog"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}
keywords = ["mkdocs", "blog"]
dynamic = ["dependencies", "version"]

[project.urls]
"Blog" = "https://blog.mcdic.net"
"Repository" = "https://github.com/McDic/BlogV2/"

# https://github.com/squidfunk/mkdocs-material/blob/246266fafad2c2fdc78022c14f7f4b2df91167f3/pyproject.toml
[project.entry-points."mkdocs.plugins"]
"mcdic" = "mkdocs_material_mcdic:McDicBlogPlugin"

[tool.setuptools.dynamic]
version = {attr = "mkdocs_material_mcdic.VERSION"}
dependencies = {file = ["requirements-plugin.txt"]}

[tool.mypy]
ignore_missing_imports = true
