[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-material-mcdic"
authors = [
  { name="Han Deok Lee", email="cyber93@gmail.com" },
]
description = "cyber93's custom plugin for the cyber93's blog"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}
keywords = ["mkdocs", "blog"]
dynamic = ["dependencies", "version"]

[project.urls]
"Blog" = "https://cyber93-technote.netlify.app"
"Repository" = "https://github.com/cyber93/TechNote/"

# https://github.com/squidfunk/mkdocs-material/blob/246266fafad2c2fdc78022c14f7f4b2df91167f3/pyproject.toml
[project.entry-points."mkdocs.plugins"]
"mcdic" = "mkdocs_material_mcdic:McDicBlogPlugin"

[tool.setuptools.dynamic]
version = {attr = "mkdocs_material_mcdic.constants.VERSION"}
dependencies = {file = ["requirements-plugin.txt"]}

[tool.mypy]
ignore_missing_imports = true
